--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -33,6 +33,15 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>io.netty</groupId>-->
+<!--            <artifactId>netty-resolver-dns-native-macos</artifactId>-->
+<!--            <version>4.1.68.Final</version> &lt;!&ndash; Adjust this version as necessary &ndash;&gt;-->
+<!--            <classifier>osx-x86_64</classifier>-->
+<!--        </dependency>-->
+
+
+
     </dependencies>
     <dependencyManagement>
         <dependencies>
